// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LAN/> Snapshot managed with enabled DHCP. 1`] = `
<div>
  <h1>
    LAN
  </h1>
  <p>
    This section contains settings for the local network (LAN). The provided defaults are suitable for most networks.
  </p>
  <p>
    <b>
      Note:
    </b>
     If you change the router IP address, all computers in LAN, probably including the one you are using now, will need to obtain a 
    <b>
      new IP address
    </b>
     which does not happen 
    <b>
      immediately
    </b>
    . It is recommended to disconnect and reconnect all LAN cables after submitting your changes to force the update. The next page will not load until you obtain a new IP from DHCP (if DHCP is enabled), and you might need to 
    <b>
      refresh the page
    </b>
     in your browser.
  </p>
  <div
    class="card p-4 col-sm-12 col-lg-12 p-0 mb-4"
  >
    <form>
      <h2>
        LAN Settings
      </h2>
      <div
        class="mb-3"
      >
        <label
          class="form-label"
          for="1"
        >
          LAN mode
        </label>
        <select
          class="form-select"
          id="1"
        >
          <option
            value="managed"
          >
            Router
          </option>
          <option
            value="unmanaged"
          >
            Computer
          </option>
        </select>
        <div
          class="form-text"
        >
          <small>
            Router mode means that this device manages the LAN (acts as a router, can assign IP addresses, etc.).
          </small>
        </div>
      </div>
      <div
        class="mb-3"
      >
        <label
          class="form-label"
          for="4"
        >
          Router IP address
        </label>
        <div
          class="input-group"
        >
          <input
            class="form-control"
            id="4"
            required=""
            type="text"
            value="192.168.1.4"
          />
        </div>
        <div
          class="form-text"
        >
          <small>
            Router's IP address in the inner network.
          </small>
        </div>
      </div>
      <div
        class="mb-3"
      >
        <label
          class="form-label"
          for="5"
        >
          Network mask
        </label>
        <div
          class="input-group"
        >
          <input
            class="form-control"
            id="5"
            required=""
            type="text"
            value="255.255.255.0"
          />
        </div>
      </div>
      <div
        class="form-check form-switch mb-3 null"
      >
        <input
          class="form-check-input"
          id="6"
          role="switch"
          type="checkbox"
        />
        <label
          class="form-check-label"
          for="6"
        >
          Enable DHCP
        </label>
        <div
          class="form-text"
        >
          <small>
            Enable this option to automatically assign IP addresses to the devices connected to the router.
          </small>
        </div>
      </div>
      <div
        class="mb-3"
      >
        <label
          class="form-label"
          for="7"
        >
          DHCP start
        </label>
        <div
          class="input-group"
        >
          <input
            class="form-control"
            id="7"
            required=""
            type="text"
            value="192.168.1.10"
          />
        </div>
      </div>
      <div
        class="mb-3"
      >
        <label
          class="form-label"
          for="8"
        >
          DHCP max leases
        </label>
        <div
          class="input-group"
        >
          <input
            class="form-control"
            id="8"
            min="1"
            required=""
            type="number"
            value="150"
          />
          <button
            aria-label="Increase"
            class="btn btn-outline-secondary"
            type="button"
          >
            <i
              class="fas fa-plus"
            />
          </button>
          <button
            aria-label="Decrease"
            class="btn btn-outline-secondary"
            type="button"
          >
            <i
              class="fas fa-minus"
            />
          </button>
        </div>
        <div
          class="form-text"
        >
          <small>
            Maximum number of addresses available for DHCP clients.
          </small>
        </div>
      </div>
      <div
        class="mb-3"
      >
        <label
          class="form-label"
          for="9"
        >
          Lease time (hours)
        </label>
        <div
          class="input-group"
        >
          <input
            class="form-control"
            id="9"
            min="1"
            required=""
            type="number"
            value="43200"
          />
          <button
            aria-label="Increase"
            class="btn btn-outline-secondary"
            type="button"
          >
            <i
              class="fas fa-plus"
            />
          </button>
          <button
            aria-label="Decrease"
            class="btn btn-outline-secondary"
            type="button"
          >
            <i
              class="fas fa-minus"
            />
          </button>
        </div>
      </div>
      <div
        class="text-end"
      >
        <button
          class="btn btn-primary col-12 col-md-3 col-lg-2 d-inline-flex justify-content-center align-items-center"
          type="submit"
        >
          <span>
            Save
          </span>
        </button>
      </div>
    </form>
  </div>
  <div
    id="dhcp-clients-container"
  >
    <div
      class="card p-4 col-sm-12 col-lg-12 p-0 mb-4"
    >
      <h2>
        DHCP Client List
      </h2>
      <p>
        This list contains all devices that are connected to the network through wired or wireless connections.
      </p>
      <div
        class="table-responsive"
      >
        <table
          class="table table-hover"
        >
          <thead
            class="thead-light"
          >
            <tr
              class="text-left"
            >
              <th>
                Hostname
              </th>
              <th>
                IPv4 Address
              </th>
              <th>
                MAC Address
              </th>
              <th
                class="text-center"
              >
                Expires
              </th>
              <th
                class="text-center"
              >
                Active
              </th>
              <th
                aria-label="Actions"
              />
            </tr>
          </thead>
          <tbody>
            <tr>
              <td
                class="align-middle"
              >
                test-client
              </td>
              <td
                class="align-middle"
              >
                192.168.1.10
              </td>
              <td
                class="align-middle"
              >
                8F:31:22:89:64:20
              </td>
              <td
                class="text-center align-middle"
              >
                2021-03-19 00:52
              </td>
              <td
                class="text-center align-middle"
              >
                <i
                  class="fas fa-check text-success"
                  title="Device is active"
                />
              </td>
              <td
                align="right"
                class="align-middle"
              >
                <button
                  class="btn btn btn-sm btn-outline-success d-inline-flex justify-content-center align-items-center"
                  type="button"
                >
                  <span>
                    Set Static
                  </span>
                </button>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
      <div
        class="text-end"
      >
        <button
          class="btn btn-outline-primary col-12 col-md-3 col-lg-2 d-inline-flex justify-content-center align-items-center"
          type="button"
        >
          <span>
            Add static lease
          </span>
        </button>
      </div>
    </div>
    <div
      class="card p-4 col-sm-12 col-lg-12 p-0 mb-4"
    >
      <h2>
        IPv6 DHCP Client List
      </h2>
      <p>
        This list contains all devices that are connected to the network through wired or wireless connections using IPv6.
      </p>
      <div
        class="table-responsive"
      >
        <table
          class="table table-hover"
        >
          <thead
            class="thead-light"
          >
            <tr
              class="text-left"
            >
              <th>
                Hostname
              </th>
              <th>
                IPv6 Address
              </th>
              <th>
                DUID
              </th>
              <th
                class="text-center"
              >
                Expires
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              class="text-left"
            >
              <td>
                test-client-2
              </td>
              <td>
                7b00:ce2:a17:41f3::w94
              </td>
              <td>
                00098f65rfcee3bndu5221d7e7i743a46546p
              </td>
              <td
                class="text-center"
              >
                2021-03-19 00:52
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;

exports[`<LAN/> Snapshot managed. 1`] = `
<div>
  <h1>
    LAN
  </h1>
  <p>
    This section contains settings for the local network (LAN). The provided defaults are suitable for most networks.
  </p>
  <p>
    <b>
      Note:
    </b>
     If you change the router IP address, all computers in LAN, probably including the one you are using now, will need to obtain a 
    <b>
      new IP address
    </b>
     which does not happen 
    <b>
      immediately
    </b>
    . It is recommended to disconnect and reconnect all LAN cables after submitting your changes to force the update. The next page will not load until you obtain a new IP from DHCP (if DHCP is enabled), and you might need to 
    <b>
      refresh the page
    </b>
     in your browser.
  </p>
  <div
    class="card p-4 col-sm-12 col-lg-12 p-0 mb-4"
  >
    <form>
      <h2>
        LAN Settings
      </h2>
      <div
        class="mb-3"
      >
        <label
          class="form-label"
          for="1"
        >
          LAN mode
        </label>
        <select
          class="form-select"
          id="1"
        >
          <option
            value="managed"
          >
            Router
          </option>
          <option
            value="unmanaged"
          >
            Computer
          </option>
        </select>
        <div
          class="form-text"
        >
          <small>
            Router mode means that this device manages the LAN (acts as a router, can assign IP addresses, etc.).
          </small>
        </div>
      </div>
      <div
        class="mb-3"
      >
        <label
          class="form-label"
          for="4"
        >
          Router IP address
        </label>
        <div
          class="input-group"
        >
          <input
            class="form-control"
            id="4"
            required=""
            type="text"
            value="192.168.1.4"
          />
        </div>
        <div
          class="form-text"
        >
          <small>
            Router's IP address in the inner network.
          </small>
        </div>
      </div>
      <div
        class="mb-3"
      >
        <label
          class="form-label"
          for="5"
        >
          Network mask
        </label>
        <div
          class="input-group"
        >
          <input
            class="form-control"
            id="5"
            required=""
            type="text"
            value="255.255.255.0"
          />
        </div>
      </div>
      <div
        class="form-check form-switch mb-3 null"
      >
        <input
          class="form-check-input"
          id="6"
          role="switch"
          type="checkbox"
        />
        <label
          class="form-check-label"
          for="6"
        >
          Enable DHCP
        </label>
        <div
          class="form-text"
        >
          <small>
            Enable this option to automatically assign IP addresses to the devices connected to the router.
          </small>
        </div>
      </div>
      <div
        class="text-end"
      >
        <button
          class="btn btn-primary col-12 col-md-3 col-lg-2 d-inline-flex justify-content-center align-items-center"
          type="submit"
        >
          <span>
            Save
          </span>
        </button>
      </div>
    </form>
  </div>
  <div
    id="dhcp-clients-container"
  />
</div>
`;

exports[`<LAN/> Snapshot unmanaged (dhcp). 1`] = `
<div>
  <h1>
    LAN
  </h1>
  <p>
    This section contains settings for the local network (LAN). The provided defaults are suitable for most networks.
  </p>
  <p>
    <b>
      Note:
    </b>
     If you change the router IP address, all computers in LAN, probably including the one you are using now, will need to obtain a 
    <b>
      new IP address
    </b>
     which does not happen 
    <b>
      immediately
    </b>
    . It is recommended to disconnect and reconnect all LAN cables after submitting your changes to force the update. The next page will not load until you obtain a new IP from DHCP (if DHCP is enabled), and you might need to 
    <b>
      refresh the page
    </b>
     in your browser.
  </p>
  <div
    class="card p-4 col-sm-12 col-lg-12 p-0 mb-4"
  >
    <form>
      <h2>
        LAN Settings
      </h2>
      <div
        class="mb-3"
      >
        <label
          class="form-label"
          for="1"
        >
          LAN mode
        </label>
        <select
          class="form-select"
          id="1"
        >
          <option
            value="managed"
          >
            Router
          </option>
          <option
            value="unmanaged"
          >
            Computer
          </option>
        </select>
        <div
          class="form-text"
        >
          <small>
            Computer mode means that this device acts as a client in this network. It acts similarly to WAN, but it has opened ports for configuration interfaces and other services.
          </small>
        </div>
      </div>
      <div
        class="mb-3"
      >
        <label
          class="form-label"
          for="2"
        >
          IPv4 protocol
        </label>
        <select
          class="form-select"
          id="2"
        >
          <option
            value="dhcp"
          >
            DHCP (automatic configuration)
          </option>
          <option
            value="static"
          >
            Static IP address (manual configuration)
          </option>
          <option
            value="none"
          >
            Don't connect this device to LAN
          </option>
        </select>
      </div>
      <div
        class="mb-3"
      >
        <label
          class="form-label"
          for="3"
        >
          DHCP hostname
        </label>
        <div
          class="input-group"
        >
          <input
            class="form-control"
            id="3"
            type="text"
            value=""
          />
        </div>
        <div
          class="form-text"
        >
          <small>
            Hostname which will be provided to DHCP server.
          </small>
        </div>
      </div>
      <div
        class="text-end"
      >
        <button
          class="btn btn-primary col-12 col-md-3 col-lg-2 d-inline-flex justify-content-center align-items-center"
          type="submit"
        >
          <span>
            Save
          </span>
        </button>
      </div>
    </form>
  </div>
  <div
    id="dhcp-clients-container"
  />
</div>
`;

exports[`<LAN/> Snapshot unmanaged none. 1`] = `
<div>
  <h1>
    LAN
  </h1>
  <p>
    This section contains settings for the local network (LAN). The provided defaults are suitable for most networks.
  </p>
  <p>
    <b>
      Note:
    </b>
     If you change the router IP address, all computers in LAN, probably including the one you are using now, will need to obtain a 
    <b>
      new IP address
    </b>
     which does not happen 
    <b>
      immediately
    </b>
    . It is recommended to disconnect and reconnect all LAN cables after submitting your changes to force the update. The next page will not load until you obtain a new IP from DHCP (if DHCP is enabled), and you might need to 
    <b>
      refresh the page
    </b>
     in your browser.
  </p>
  <div
    class="card p-4 col-sm-12 col-lg-12 p-0 mb-4"
  >
    <form>
      <h2>
        LAN Settings
      </h2>
      <div
        class="mb-3"
      >
        <label
          class="form-label"
          for="1"
        >
          LAN mode
        </label>
        <select
          class="form-select"
          id="1"
        >
          <option
            value="managed"
          >
            Router
          </option>
          <option
            value="unmanaged"
          >
            Computer
          </option>
        </select>
        <div
          class="form-text"
        >
          <small>
            Computer mode means that this device acts as a client in this network. It acts similarly to WAN, but it has opened ports for configuration interfaces and other services.
          </small>
        </div>
      </div>
      <div
        class="mb-3"
      >
        <label
          class="form-label"
          for="2"
        >
          IPv4 protocol
        </label>
        <select
          class="form-select"
          id="2"
        >
          <option
            value="dhcp"
          >
            DHCP (automatic configuration)
          </option>
          <option
            value="static"
          >
            Static IP address (manual configuration)
          </option>
          <option
            value="none"
          >
            Don't connect this device to LAN
          </option>
        </select>
      </div>
      <div
        class="text-end"
      >
        <button
          class="btn btn-primary col-12 col-md-3 col-lg-2 d-inline-flex justify-content-center align-items-center"
          type="submit"
        >
          <span>
            Save
          </span>
        </button>
      </div>
    </form>
  </div>
  <div
    id="dhcp-clients-container"
  />
</div>
`;

exports[`<LAN/> Snapshot unmanaged static. 1`] = `
<div>
  <h1>
    LAN
  </h1>
  <p>
    This section contains settings for the local network (LAN). The provided defaults are suitable for most networks.
  </p>
  <p>
    <b>
      Note:
    </b>
     If you change the router IP address, all computers in LAN, probably including the one you are using now, will need to obtain a 
    <b>
      new IP address
    </b>
     which does not happen 
    <b>
      immediately
    </b>
    . It is recommended to disconnect and reconnect all LAN cables after submitting your changes to force the update. The next page will not load until you obtain a new IP from DHCP (if DHCP is enabled), and you might need to 
    <b>
      refresh the page
    </b>
     in your browser.
  </p>
  <div
    class="card p-4 col-sm-12 col-lg-12 p-0 mb-4"
  >
    <form>
      <h2>
        LAN Settings
      </h2>
      <div
        class="mb-3"
      >
        <label
          class="form-label"
          for="1"
        >
          LAN mode
        </label>
        <select
          class="form-select"
          id="1"
        >
          <option
            value="managed"
          >
            Router
          </option>
          <option
            value="unmanaged"
          >
            Computer
          </option>
        </select>
        <div
          class="form-text"
        >
          <small>
            Computer mode means that this device acts as a client in this network. It acts similarly to WAN, but it has opened ports for configuration interfaces and other services.
          </small>
        </div>
      </div>
      <div
        class="mb-3"
      >
        <label
          class="form-label"
          for="2"
        >
          IPv4 protocol
        </label>
        <select
          class="form-select"
          id="2"
        >
          <option
            value="dhcp"
          >
            DHCP (automatic configuration)
          </option>
          <option
            value="static"
          >
            Static IP address (manual configuration)
          </option>
          <option
            value="none"
          >
            Don't connect this device to LAN
          </option>
        </select>
      </div>
      <div
        class="mb-3"
      >
        <label
          class="form-label"
          for="4"
        >
          IP address
        </label>
        <div
          class="input-group"
        >
          <input
            class="form-control"
            id="4"
            required=""
            type="text"
            value="192.168.1.4"
          />
        </div>
      </div>
      <div
        class="mb-3"
      >
        <label
          class="form-label"
          for="5"
        >
          Network mask
        </label>
        <div
          class="input-group"
        >
          <input
            class="form-control"
            id="5"
            required=""
            type="text"
            value="255.255.255.0"
          />
        </div>
      </div>
      <div
        class="mb-3"
      >
        <label
          class="form-label"
          for="6"
        >
          Gateway
        </label>
        <div
          class="input-group"
        >
          <input
            class="form-control"
            id="6"
            required=""
            type="text"
            value="192.168.1.4"
          />
        </div>
      </div>
      <div
        class="mb-3"
      >
        <label
          class="form-label"
          for="7"
        >
          DNS server 1
        </label>
        <div
          class="input-group"
        >
          <input
            class="form-control"
            id="7"
            type="text"
            value=""
          />
        </div>
        <div
          class="form-text"
        >
          <small>
            DNS server address is not required as the built-in DNS resolver is capable of working without it.
          </small>
        </div>
      </div>
      <div
        class="mb-3"
      >
        <label
          class="form-label"
          for="8"
        >
          DNS server 2
        </label>
        <div
          class="input-group"
        >
          <input
            class="form-control"
            id="8"
            type="text"
            value=""
          />
        </div>
        <div
          class="form-text"
        >
          <small>
            DNS server address is not required as the built-in DNS resolver is capable of working without it.
          </small>
        </div>
      </div>
      <div
        class="text-end"
      >
        <button
          class="btn btn-primary col-12 col-md-3 col-lg-2 d-inline-flex justify-content-center align-items-center"
          type="submit"
        >
          <span>
            Save
          </span>
        </button>
      </div>
    </form>
  </div>
  <div
    id="dhcp-clients-container"
  />
</div>
`;

exports[`Customized <LAN/> Snapshot managed with enabled DHCP. 1`] = `
<div>
  <h1>
    LAN
  </h1>
  <p>
    This section contains settings for the local network (LAN). The provided defaults are suitable for most networks.
  </p>
  <p>
    <b>
      Note:
    </b>
     If you change the router IP address, all computers in LAN, probably including the one you are using now, will need to obtain a 
    <b>
      new IP address
    </b>
     which does not happen 
    <b>
      immediately
    </b>
    . It is recommended to disconnect and reconnect all LAN cables after submitting your changes to force the update. The next page will not load until you obtain a new IP from DHCP (if DHCP is enabled), and you might need to 
    <b>
      refresh the page
    </b>
     in your browser.
  </p>
  <div
    class="card p-4 col-sm-12 col-lg-12 p-0 mb-4"
  >
    <form>
      <h2>
        LAN Settings
      </h2>
      <div
        class="mb-3 form-check"
      >
        <input
          checked=""
          class="form-check-input"
          id="1"
          type="checkbox"
        />
        <label
          class="form-check-label"
          for="1"
        >
          Redirect to 192.168.1.1
        </label>
      </div>
      <div
        class="mb-3"
      >
        <label
          class="form-label"
          for="2"
        >
          Router IP address
        </label>
        <div
          class="input-group"
        >
          <input
            class="form-control"
            id="2"
            required=""
            type="text"
            value="192.168.1.4"
          />
        </div>
        <div
          class="form-text"
        >
          <small>
            Router's IP address in the inner network.
          </small>
        </div>
      </div>
      <div
        class="mb-3"
      >
        <label
          class="form-label"
          for="3"
        >
          Network mask
        </label>
        <div
          class="input-group"
        >
          <input
            class="form-control"
            id="3"
            required=""
            type="text"
            value="255.255.255.0"
          />
        </div>
      </div>
      <div
        class="form-check form-switch mb-3 null"
      >
        <input
          class="form-check-input"
          id="4"
          role="switch"
          type="checkbox"
        />
        <label
          class="form-check-label"
          for="4"
        >
          Enable DHCP
        </label>
        <div
          class="form-text"
        >
          <small>
            Enable this option to automatically assign IP addresses to the devices connected to the router.
          </small>
        </div>
      </div>
      <div
        class="mb-3"
      >
        <label
          class="form-label"
          for="5"
        >
          DHCP start
        </label>
        <div
          class="input-group"
        >
          <input
            class="form-control"
            id="5"
            required=""
            type="text"
            value="192.168.1.10"
          />
        </div>
      </div>
      <div
        class="mb-3"
      >
        <label
          class="form-label"
          for="6"
        >
          DHCP max leases
        </label>
        <div
          class="input-group"
        >
          <input
            class="form-control"
            id="6"
            min="1"
            required=""
            type="number"
            value="150"
          />
          <button
            aria-label="Increase"
            class="btn btn-outline-secondary"
            type="button"
          >
            <i
              class="fas fa-plus"
            />
          </button>
          <button
            aria-label="Decrease"
            class="btn btn-outline-secondary"
            type="button"
          >
            <i
              class="fas fa-minus"
            />
          </button>
        </div>
        <div
          class="form-text"
        >
          <small>
            Maximum number of addresses available for DHCP clients.
          </small>
        </div>
      </div>
      <div
        class="mb-3"
      >
        <label
          class="form-label"
          for="7"
        >
          Lease time (hours)
        </label>
        <div
          class="input-group"
        >
          <input
            class="form-control"
            id="7"
            min="1"
            required=""
            type="number"
            value="43200"
          />
          <button
            aria-label="Increase"
            class="btn btn-outline-secondary"
            type="button"
          >
            <i
              class="fas fa-plus"
            />
          </button>
          <button
            aria-label="Decrease"
            class="btn btn-outline-secondary"
            type="button"
          >
            <i
              class="fas fa-minus"
            />
          </button>
        </div>
      </div>
      <div
        class="text-end"
      >
        <button
          class="btn btn-primary col-12 col-md-3 col-lg-2 d-inline-flex justify-content-center align-items-center"
          type="submit"
        >
          <span>
            Save
          </span>
        </button>
      </div>
    </form>
  </div>
  <div
    id="dhcp-clients-container"
  >
    <div
      class="card p-4 col-sm-12 col-lg-12 p-0 mb-4"
    >
      <h2>
        DHCP Client List
      </h2>
      <p>
        This list contains all devices that are connected to the network through wired or wireless connections.
      </p>
      <div
        class="table-responsive"
      >
        <table
          class="table table-hover"
        >
          <thead
            class="thead-light"
          >
            <tr
              class="text-left"
            >
              <th>
                Hostname
              </th>
              <th>
                IPv4 Address
              </th>
              <th>
                MAC Address
              </th>
              <th
                class="text-center"
              >
                Expires
              </th>
              <th
                class="text-center"
              >
                Active
              </th>
              <th
                aria-label="Actions"
              />
            </tr>
          </thead>
          <tbody>
            <tr>
              <td
                class="align-middle"
              >
                test-client
              </td>
              <td
                class="align-middle"
              >
                192.168.1.10
              </td>
              <td
                class="align-middle"
              >
                8F:31:22:89:64:20
              </td>
              <td
                class="text-center align-middle"
              >
                2021-03-19 00:52
              </td>
              <td
                class="text-center align-middle"
              >
                <i
                  class="fas fa-check text-success"
                  title="Device is active"
                />
              </td>
              <td
                align="right"
                class="align-middle"
              >
                <button
                  class="btn btn btn-sm btn-outline-success d-inline-flex justify-content-center align-items-center"
                  type="button"
                >
                  <span>
                    Set Static
                  </span>
                </button>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
      <div
        class="text-end"
      >
        <button
          class="btn btn-outline-primary col-12 col-md-3 col-lg-2 d-inline-flex justify-content-center align-items-center"
          type="button"
        >
          <span>
            Add static lease
          </span>
        </button>
      </div>
    </div>
    <div
      class="card p-4 col-sm-12 col-lg-12 p-0 mb-4"
    >
      <h2>
        IPv6 DHCP Client List
      </h2>
      <p>
        This list contains all devices that are connected to the network through wired or wireless connections using IPv6.
      </p>
      <p
        class="text-muted text-center"
      >
        No clients found.
      </p>
    </div>
  </div>
</div>
`;

exports[`Customized <LAN/> Snapshot managed. 1`] = `
<div>
  <h1>
    LAN
  </h1>
  <p>
    This section contains settings for the local network (LAN). The provided defaults are suitable for most networks.
  </p>
  <p>
    <b>
      Note:
    </b>
     If you change the router IP address, all computers in LAN, probably including the one you are using now, will need to obtain a 
    <b>
      new IP address
    </b>
     which does not happen 
    <b>
      immediately
    </b>
    . It is recommended to disconnect and reconnect all LAN cables after submitting your changes to force the update. The next page will not load until you obtain a new IP from DHCP (if DHCP is enabled), and you might need to 
    <b>
      refresh the page
    </b>
     in your browser.
  </p>
  <div
    class="card p-4 col-sm-12 col-lg-12 p-0 mb-4"
  >
    <form>
      <h2>
        LAN Settings
      </h2>
      <div
        class="mb-3 form-check"
      >
        <input
          checked=""
          class="form-check-input"
          id="1"
          type="checkbox"
        />
        <label
          class="form-check-label"
          for="1"
        >
          Redirect to 192.168.1.1
        </label>
      </div>
      <div
        class="mb-3"
      >
        <label
          class="form-label"
          for="2"
        >
          Router IP address
        </label>
        <div
          class="input-group"
        >
          <input
            class="form-control"
            id="2"
            required=""
            type="text"
            value="192.168.1.4"
          />
        </div>
        <div
          class="form-text"
        >
          <small>
            Router's IP address in the inner network.
          </small>
        </div>
      </div>
      <div
        class="mb-3"
      >
        <label
          class="form-label"
          for="3"
        >
          Network mask
        </label>
        <div
          class="input-group"
        >
          <input
            class="form-control"
            id="3"
            required=""
            type="text"
            value="255.255.255.0"
          />
        </div>
      </div>
      <div
        class="form-check form-switch mb-3 null"
      >
        <input
          class="form-check-input"
          id="4"
          role="switch"
          type="checkbox"
        />
        <label
          class="form-check-label"
          for="4"
        >
          Enable DHCP
        </label>
        <div
          class="form-text"
        >
          <small>
            Enable this option to automatically assign IP addresses to the devices connected to the router.
          </small>
        </div>
      </div>
      <div
        class="text-end"
      >
        <button
          class="btn btn-primary col-12 col-md-3 col-lg-2 d-inline-flex justify-content-center align-items-center"
          type="submit"
        >
          <span>
            Save
          </span>
        </button>
      </div>
    </form>
  </div>
  <div
    id="dhcp-clients-container"
  />
</div>
`;
